added bear video

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             video2: "-66eMMbg4fg"
         },
         "VS87S": {
-            video1: "u6hc_oMxafU",
-            video2: "-66eMMbg4fg"
+            video1: "l0qqdfx_4Ew",
+            video2: "Ms9U9GJZ5Tg"
         }
     };
 
