--- a/index.html
+++ b/index.html
@@ -179,40 +179,44 @@
     <!-- Subtitle Instructions -->
     <div id="subtitle-instructions-en" style="display: none">
       📱 For full-screen viewing on mobile: Tap the YouTube icon in the bottom
-      right corner to open the video on YouTube and enable subtitles. You can
-      turn on subtitles by clicking the "CC" button. To translate subtitles into
-      another language, go to Settings → Subtitles/CC → Auto-translate, and
-      select your preferred language.
+      right corner to open the video on YouTube and enable subtitles.
+      <br />You can turn on subtitles by clicking the "CC" button. <br />To
+      translate subtitles into another language, go to Settings → Subtitles/CC →
+      Auto-translate, and select your preferred language.
     </div>
     <div id="subtitle-instructions-de" style="display: none">
       📱 Für die Vollbildanzeige auf dem Handy: Tippe auf das YouTube-Symbol
       unten rechts, um das Video direkt in YouTube zu öffnen und Untertitel zu
-      aktivieren. Du kannst die Untertitel mit der "CC"-Taste einschalten. Um
-      die Untertitel in eine andere Sprache zu übersetzen, gehe zu Einstellungen
-      → Untertitel/CC → Automatisch übersetzen, und wähle deine gewünschte
-      Sprache aus.
+      aktivieren.
+      <br />Du kannst die Untertitel mit der "CC"-Taste einschalten. <br />
+      Um die Untertitel in eine andere Sprache zu übersetzen, gehe zu
+      Einstellungen → Untertitel/CC → Automatisch übersetzen, und wähle deine
+      gewünschte Sprache aus.
     </div>
     <div id="subtitle-instructions-es" style="display: none">
       📱 Para ver en pantalla completa desde el móvil: Toca el ícono de YouTube
       en la esquina inferior derecha para abrir el video en YouTube y activar
-      los subtítulos. Puedes activar los subtítulos haciendo clic en el botón
-      "CC". Para traducir los subtítulos a otro idioma, ve a Configuración →
+      los subtítulos.
+      <br />Puedes activar los subtítulos haciendo clic en el botón "CC".
+      <br />Para traducir los subtítulos a otro idioma, ve a Configuración →
       Subtítulos/CC → Traducir automáticamente, y elige tu idioma preferido.
     </div>
     <div id="subtitle-instructions-fr" style="display: none">
       📱 Pour regarder en plein écran sur mobile : Appuyez sur l’icône YouTube
       en bas à droite pour ouvrir la vidéo directement sur YouTube et activer
-      les sous-titres. Vous pouvez activer les sous-titres en cliquant sur le
-      bouton "CC". Pour traduire les sous-titres dans une autre langue, allez
-      dans Paramètres → Sous-titres/CC → Traduction automatique, puis choisissez
-      la langue souhaitée.
+      les sous-titres.
+      <br />Vous pouvez activer les sous-titres en cliquant sur le bouton "CC".
+      <br />Pour traduire les sous-titres dans une autre langue, allez dans
+      Paramètres → Sous-titres/CC → Traduction automatique, puis choisissez la
+      langue souhaitée.
     </div>
     <div id="subtitle-instructions-pl" style="display: none">
       📱 Aby oglądać w trybie pełnoekranowym na telefonie: Kliknij ikonę YouTube
       w prawym dolnym rogu, aby otworzyć film w aplikacji YouTube i włączyć
-      napisy. Możesz włączyć napisy, klikając przycisk "CC". Aby przetłumaczyć
-      napisy na inny język, przejdź do Ustawienia → Napisy/CC → Tłumaczenie
-      automatyczne, a następnie wybierz preferowany język.
+      napisy.
+      <br />Możesz włączyć napisy, klikając przycisk "CC". <br />Aby
+      przetłumaczyć napisy na inny język, przejdź do Ustawienia → Napisy/CC →
+      Tłumaczenie automatyczne, a następnie wybierz preferowany język.
     </div>
 
     <!-- Video Container -->
