--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="content">
         <!-- Dynamic Translations -->
         <div id="content-en" class="translation" style="display: none">
-          <h2>WELCOME TO TWIST NEST SCHOOL!</h2>
+          <h2>WELCOME TO <br /> TWIST NEST SCHOOL!</h2>
           <h3>
             Congratulations on taking the first step towards unlocking a world
             of creativity with Twist Nest School! You’re just one coupon code
